configurações do firebase e firestores

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Portal de Socorro e Apoio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="w-full flex flex-col"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="./node_modules/preline/dist/preline.js"></script>
   </body>
 </html>
